--- a/LearningEnglish/Base.lproj/Main.storyboard
+++ b/LearningEnglish/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fNg-oH-M9k">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,87 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LearningEnglish" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="u3r-NV-Z7X"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1529" y="-260"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="S7k-KW-vps">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fNg-oH-M9k" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NjJ-eK-qnq">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="zgB-QU-Xyn" kind="relationship" relationship="viewControllers" id="ZSV-i4-eUh"/>
+                        <segue destination="U4w-V0-fyQ" kind="relationship" relationship="viewControllers" id="bbV-Pt-e09"/>
+                        <segue destination="UdC-ME-930" kind="relationship" relationship="viewControllers" id="GMH-go-aAr"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QVe-cm-379" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-182.40000000000001" y="117.84107946026987"/>
+        </scene>
+        <!--Learn-->
+        <scene sceneID="GOl-Rj-1pj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zgB-QU-Xyn" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Learn" image="ImgLearnBlack" id="PEr-xo-41x"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1Ct-HH-V8F">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qvz-V1-yP2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WRY-L0-ieV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="687" y="-260"/>
+        </scene>
+        <!--Find-->
+        <scene sceneID="TeJ-N1-ILZ">
+            <objects>
+                <viewController id="UdC-ME-930" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Nds-oZ-hCO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="sfc-ap-Po6"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Find" image="ImgFindBlack" id="KEL-2t-DKq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="etH-vp-uu5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="686" y="531"/>
+        </scene>
+        <!--AddWords-->
+        <scene sceneID="AqO-Pu-mP5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="AddWords" referencedIdentifier="AddWords" id="U4w-V0-fyQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="gBg-ux-hGT"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BUF-ZR-c7o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="753" y="117"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ImgFindBlack" width="24" height="24"/>
+        <image name="ImgLearnBlack" width="27" height="26"/>
+    </resources>
 </document>
